commit before adding mongoDB

--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -1,8 +1,11 @@
+html
 link(href="/favicon.ico", rel="shortcut icon", type="image/x-icon")
 link(href="/css/bootstrap.css", rel="stylesheet")
 link(href="/css/toastr/toastr.css", rel="stylesheet")
 link(href="/css/site.css", rel="stylesheet")
-body
-block main-content
-
-include scripts 
+base(href="/")
+head
+body(ng-app="app")
+  block main-content
+  include scripts 
+ 
