--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -2,3 +2,4 @@ script(src="/vendor/jquery/dist/jquery.js")
 script(src="/vendor/angular/angular.js")
 script(src="/vendor/angular-resource/angular-resource.js")
 script(src="/vendor/angular-route/angular-route.js")
+script(src="/app/app.js")
